Introduce: Updated documentation
    Thank you for the excellent readme document
        provided by Chengqi Liu.

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -6,14 +6,14 @@
 -----------
 Kernel Designer Group
 
-Name        : sanpe
+Name        : John-sanpe
 Email       : sanpeqf@gmail.com
-Represent   : global
-
-Name        : Pan Chen
-Email       : bapie0503@gmail.com
-Represent   : global
+Represent   : Global
 
 Name        : ffashion
 Email       : ffashion@gmail.com
 Represent   : IPv4
+
+Name        : ChengQi Liu
+Email       : liuchengqi666@gmail.com
+Represent   : Readme and Logo
